tests/fixtures/invalid/bad-web-server-config-1.yini
// Important: This file consists of one error for testing.

// Section named 'Server'.
^ Server
host = '0.0.0.0'
port = 8080
enable_ssl = false
log_file = '/var/log/server.log            // ERROR: Invalid string literal, unclosed string
max_connections = 200

    // Sub-section 'SSL' of 'Server'.
    ^^ SSL
    enabled = false
    cert_path = null
    key_path = null
